# nrf24le1_flasher

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  spi.h  spi_ftmpsse.c
